# iktat

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  6.0.1  AGENTS.md  Backing  CODEx_SESSION_RULES.md  CONTEXT_PACK.md  README.md  _0_FLASK.bat  _check_meta.py  _debug_models.py  _inspect_dbs.py  _purge_stray_in_main.py  all_files_list.txt  config.py  constraints.txt  db-core-migrate.bat  db-core-up.bat  db-exam-migrate.bat  db-exam-up.bat  devbox.json  factory_reset.py  file_list.txt  fix_tabs.py  lines.txt  project_structure.txt  pyproject.toml  pytest.ini  query_changelog.py  requirements-dev.txt  requirements.txt  routes.txt  run.py  run_scheduler.py  run_tasks.py  setup.sh  sitecustomize.py  (+5 more)
app/: __init__.py  audit.py  email_utils.py  error_handlers.py  forms.py  models.py  models_all.py  paths.py  routes.py  security.py  tasks.py
docs/: dev_doc.md
hooks/: flask_db_check.py  flask_db_single_head.py  flask_db_upgrade_live.py
migrations/: env.py
migrations_examination/: README  env.py
scripts/: audit_containers.py  migrate_case_number_format.py  migrate_screen_name.py  reset_storage_and_data.py  reset_storage_and_data_2.py  sqlite_hotfix_add_full_name.py  stamp_multibind.py  verify_examination_uploads.py  wipe_cases.py
tests/: compat_flaskwtf.py  conftest.py  helpers.py  test_admin_changelog.py  test_admin_default_leiro.py  test_admin_full_name.py  test_admin_penugy.py  test_alembic_sqlite_safety.py  test_app_loads.py  test_assignment_access_szig.py  test_audit_logging.py  test_auth_routes.py  test_base_bfcache_reload.py  test_basic.py  test_cache_headers.py  test_case_detail_effective_describer.py  test_case_documents_render.py  test_case_guards.py  test_case_labels.py  test_case_number_format.py  test_case_template_boncolas_copy.py  test_cases_new_form.py  test_certificate_generation.py  test_changelog_notes.py  test_changelog_orders.py  test_cookie_notice_ack.py  test_core_models.py  test_csp.py  test_csp_icons.py  test_csrf_core.py  test_csrf_enforcement.py  test_csrf_track.py  test_css_csp.py  test_dashboard_assigned_investigations.py  test_dashboard_penzugy_flow.py  test_date_safety.py  test_datesafety_core.py  test_devdoc_updater.py  test_docx_placeholder_cross_tags.py  test_docx_placeholder_sanitizer.py  (+84 more)
tools/: alembic_lint.py  bootstrap_constraints.ps1  codex_prep.ps1  devdoc.py  flask_db_check.py
(+210 files in other folders)
