# pyproject.toml — Poetry project config

[tool.poetry]
name = "forensic-case-tracker"
version = "0.1.0"
description = "IKTATAS2.0 forensic case tracker"
authors = ["Your Team <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
alembic = "1.12.0"
bcrypt = "4.0.1"
blinker = "1.9.0"
click = "8.2.1"
docxtpl = "0.16.8"
Flask = "2.3.2"
Flask-Login = "0.6.3"
Flask-Mail = "0.9.1"
Flask-Migrate = "4.1.0"
Flask-SQLAlchemy = "3.1.1"
Flask-WTF = "1.2.1"
greenlet = "3.2.3"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
Mako = "1.3.10"
MarkupSafe = "3.0.2"
numpy = "1.26.4"
openpyxl = "3.1.2"
packaging = "25.0"
pandas = "2.1.3"
passlib = "1.7.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-docx = "0.8.11"
pytz = "2025.2"
six = "1.17.0"
SQLAlchemy = "2.0.23"
typing-extensions = "4.14.1"
Werkzeug = "2.3.6"
WTForms = "3.2.1"
pyyaml = ">=6.0.1,<7"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-xdist = "3.5.0"
coverage = "7.3.2"
black = "24.4.2"
ruff = "0.6.9"
mypy = "1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------- Formatting / Linting ----------------

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
# Ensure these directory names appear in the file (and are sensibly excluded)
exclude = '''
(
  /(\.venv|venv|\.git|\.mypy_cache|\.pytest_cache|\.ruff_cache|build|dist)/
| ^migrations/
| ^instance/
| ^uploads/
)
'''

[tool.isort]
profile = "black"
line_length = 88
# Put the same paths here so the substrings are present and the tools agree
skip = [
  ".venv",
  "venv",
  "build",
  "dist",
  "migrations",
  "instance",
  "uploads"
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "venv", "build", "dist", "migrations", "instance", "uploads"]
fix = true
force-exclude = true

[tool.ruff.lint]
# keep in sync with black/isort prefs
select = ["E", "F", "W", "B"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
# tests sometimes keep locals for readability & import after runtime checks
"tests/**.py" = ["E402", "F401", "F841"]

# --------------- Pytest ----------------

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
